--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,61 @@
 /Lab1_LukeSkywalker/resource-files
 /Lab1_LukeSkywalker/.idea
 /Lab1_LukeSkywalker/index-files
+/Lab1_LukeSkywalker/script-files
+/Lab1_LukeSkywalker/index.html
+/Lab1_LukeSkywalker/element-list
+/Lab1_LukeSkywalker/member-search-index.js
+/Lab1_LukeSkywalker/module-search-index.js
+/Lab1_LukeSkywalker/package-search-index.js
+/Lab1_LukeSkywalker/pom.xml
+/Lab1_LukeSkywalker/search.html
+/Lab1_LukeSkywalker/overview-tree.html
+/Lab1_LukeSkywalker/tag-search-index.js
+/Lab1_LukeSkywalker/type-search-index.js
+/Lab1_LukeSkywalker/legal
+/Lab1_LukeSkywalker/.mvn
+/Lab1_LukeSkywalker/allclasses-index.html
+/Lab1_LukeSkywalker/allpackages-index.html
+
+
+
+
+
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
+*.iml
+*.ipr
+
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
+
+### Mac OS ###
+.DS_Store
